--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.82.0",
+    "axios": "^1.10.0",
     "firebase": "^11.7.3",
+    "form-data": "^4.0.4",
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
+    "mailgun.js": "^12.0.3",
     "next-i18next": "^15.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
-    "react-i18next": "^15.5.2"
+    "react-i18next": "^15.5.2",
+    "react-multi-carousel": "^2.8.6",
+    "react-simple-image-viewer": "^1.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
