--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-i18next": "^15.5.2",
+    "react-modal": "^3.16.3",
     "react-multi-carousel": "^2.8.6",
     "react-simple-image-viewer": "^1.2.2"
   },
