add slider when start list click add images for event and add email send on upcoming events

--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "axios": "^1.10.0",
     "firebase": "^11.7.3",
     "form-data": "^4.0.4",
+    "framer-motion": "^12.23.24",
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
+    "lightgallery": "^2.9.0",
     "mailgun.js": "^12.0.3",
+    "next-gallery": "^2.1.1",
     "next-i18next": "^15.4.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next-image-gallery": "^0.0.26",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-grid-gallery": "^1.0.1",
     "react-i18next": "^15.5.2",
+    "react-image-gallery": "^1.4.0",
     "react-modal": "^3.16.3",
     "react-multi-carousel": "^2.8.6",
     "react-simple-image-viewer": "^1.2.2"
